deployment/api/api_deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS,DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://frontend.elyte.com"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-URI: $request_uri";
    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - '*.elyte.com'
        - backend.elyte.com
      secretName: tls-secret
  rules:
  - host: elyte.api.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      name: api
  strategy:
    type: Recreate # All existing Pods are killed before new ones are created
  template:
    metadata:
      labels:
        name: api
        role: backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          imagePullPolicy: Always
          image: elyte5star/api:v1 
          ports:
            - containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: demo
spec:
  type: LoadBalancer
  selector:
    name: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - port: 4000
      name: https
      targetPort: 443
