deployment/api/api_network.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-network-policy
  namespace: demo
spec:
  podSelector:
    matchLabels:
      role: backend
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 443
